--- a/recipe.yml
+++ b/recipe.yml
@@ -1,5 +1,5 @@
 name: Kanola Nvidia
-id: nplasma
+id: vplasma
 stages:
 - id: build
   base: ghcr.io/kanola-images/plasma:main
@@ -19,78 +19,44 @@ stages:
     - lpkg --unlock
     - apt-get update
 
-  - name: nvidia-official-driver
-    type: shell
-    commands:
-    - curl -fSsL https://developer.download.nvidia.com/compute/cuda/repos/debian12/x86_64/3bf863cc.pub | gpg --dearmor -o /usr/share/keyrings/nvidia-drivers.gpg
-    - echo 'deb [signed-by=/usr/share/keyrings/nvidia-drivers.gpg] https://developer.download.nvidia.com/compute/cuda/repos/debian12/x86_64/ /' > /etc/apt/sources.list.d/nvidia-drivers.list
-    - apt-get update
-    - apt-get install nvidia-driver nvidia-vaapi-driver nvidia-settings nvidia-smi -y
-    - apt-mark hold nvidia-driver nvidia-vaapi-driver nvidia-settings nvidia-smi
-
-  - name: extra-utilities
+  - name: vm-tools
     type: apt
     source:
       packages:
-      - switcheroo-control
+      - open-vm-tools 
+      - open-vm-tools-desktop
 
-  - name: nvidia-ctk-repo
-    type: shell
-    commands:
-      - curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg
-      - curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | tee /etc/apt/sources.list.d/nvidia-container-toolkit.list
-      - apt-get update
-      - apt-get install nvidia-container-toolkit -y
-      - apt-mark hold nvidia-container-toolkit
-
-  - name: vanilla-tools
-    type: shell
+  - name: virtualbox-guest-additions
+    type: apt
     source:
-      type: tar
-      url: https://github.com/Vanilla-OS/vanilla-tools/releases/download/continuous/vanilla-tools.tar.gz
-    commands:
-    - mkdir -p /usr/bin
-    - cp /sources/vanilla-tools/vanilla-tools/nrun /usr/bin/nrun
-    - cp /sources/vanilla-tools/vanilla-tools/prime-switch /usr/bin/prime-switch
-    - chmod +x /usr/bin/nrun
-    - chmod +x /usr/bin/prime-switch
+      packages:
+      - virtualbox-guest-utils
+      - virtualbox-guest-x11
 
-  - name: vanilla-prime-utility
-    type: meson
+  - name: qemu
+    type: apt
     source:
-      type: git
-      url: https://github.com/Vanilla-OS/vanilla-prime-utility
-      branch: main
-      commit: latest
-    modules:
-    - name: vanilla-prime-utility-deps-install
-      type: apt
-      source:
-        packages:
-        - build-essential
-        - gettext
-        - libadwaita-1-dev
-        - meson
+      packages:
+      - qemu-guest-agent
 
-  - name: enable-wayland
-    type: shell
-    commands:
-    - mkdir -p /etc/udev/rules.d
-    - ln -s /dev/null /etc/udev/rules.d/61-gdm.rules
+  - name: spice
+    type: apt
+    source:
+      packages:
+      - spice-vdagent
+      - spice-webdavd
 
   - name: cleanup
     type: shell
     commands:
     - apt autoremove -y
     - apt clean
-    - apt remove -y zutty gnome-shell-extension-prefs
-    - SUDO_FORCE_REMOVE=yes apt purge -y sudo
     - lpkg --lock
 
   - name: fsguard
     type: fsguard
-    CustomFsGuard: false
     FsGuardLocation: "/usr/sbin/FsGuard"
+    CustomFsGuard: false
     GenerateKey: true
     FilelistPaths: ["/usr/bin"]
     modules:
@@ -100,10 +66,3 @@ stages:
           - rm -rf /FsGuard 
           - rm -f ./minisign.pub ./minisign.key 
           - chmod +x /usr/sbin/init
-
-  - name: cleanup2
-    type: shell
-    commands:
-      - rm -rf /tmp/*
-      - rm -rf /var/tmp/*
-      - rm -rf /sources
